# CSC195

./: .gitignore  README.md  csc195.cpp  meson.build  robot.py
subprojects/: .gitignore  crossline.wrap  fltk.wrap
subprojects/Classes/: Classes.cpp  basewidget.cpp  basewidget.h  databaseview.cpp  databaseview.h  imagelabel.cpp  imagelabel.h  meson.build
subprojects/Classes/dbtypes/: baseclass.cpp  baseclass.h  reels.cpp  reels.h  shorts.cpp  shorts.h  tiktok.cpp  tiktok.h
subprojects/Classes/resources/: main.ui  reels.ui  shorts.ui  tiktok.ui
subprojects/Containers/: Containers.cpp  meson.build
subprojects/DataTypes/: DataTypes.cpp  meson.build
subprojects/FLTKTest/: fltktest.cpp  meson.build
subprojects/FLTKTest/resources/: FLTKTest.fl  gen_headers.py
subprojects/Fail/: Circle.cpp  Circle.h  Fail.cpp  Rectangle.cpp  Rectangle.h  Shape.h  meson.build
subprojects/Fractions/: application.cpp  application.h  fractions.cpp  meson.build  templatewidget.h
subprojects/Fractions/mathlib/: mathlib.h  operations.h  simplenumber.h
subprojects/Fractions/resources/: TestProject.cmb  testproject.ui  ui-resources.gresource.xml
subprojects/GTKMMTest/: gtkmmtest.cpp  meson.build
subprojects/GTKMMTest/resources/: TestProject.cmb  testproject.ui  ui-resources.gresource.xml
subprojects/HelloWorld/: HelloWorld.cpp  Student.cpp  Student.h  meson.build
subprojects/MemoryReview/: MemoryReview.cpp  meson.build
subprojects/Scrambler/: Scrambler.cpp  keypresstextedit.h  mainwidget.h  meson.build
subprojects/Scrambler/crypts/: cutter.cpp  cutter.h  plain.cpp  reverser.cpp  reverser.h  stringEncryptable.cpp  stringEncryptable.h  vowelReplacer.cpp  vowelReplacer.h  xorCrypt.cpp  xorCrypt.h
subprojects/Scrambler/resources/: main.ui
subprojects/UserDataTypes/: Employee.cpp  Employee.h  UserDataTypes.cpp  meson.build
subprojects/libadwaitamm-1/: .gitignore  AUTHORS  README  libadwaitamm.doap  meson.build  meson_options.txt
subprojects/libadwaitamm-1/doc/reference/: Doxyfile.in  meson.build
subprojects/libadwaitamm-1/examples/example1/: main.cc
subprojects/libadwaitamm-1/libadwaita/: libadwaitamm.h  meson.build
subprojects/libadwaitamm-1/libadwaita/libadwaitamm/: init.cc  meson.build
subprojects/libadwaitamm-1/libadwaita/src/: actionrow.hg  application.ccg  application.hg  applicationwindow.hg  comborow.hg  entryrow.hg  enumlistitem.hg  enumlistmodel.hg  libadwaita_docs.xml  libadwaita_enums.defs  libadwaita_methods.defs  libadwaita_signals.defs  preferencesrow.hg  spinrow.hg  switchrow.hg  toast.hg  toastoverlay.hg
subprojects/libadwaitamm-1/subprojects/: libadwaita-1.wrap
subprojects/libadwaitamm-1/tests/: meson.build
subprojects/libadwaitamm-1/tests/test1/: main.cc
subprojects/libadwaitamm-1/tests/test2/: main.cc
subprojects/libadwaitamm-1/tools/: generate_defs_and_docs.sh
subprojects/libadwaitamm-1/tools/extra_defs_gen/: generate_defs_libadwaita.cc  meson.build
subprojects/libadwaitamm-1/tools/m4/: convert_libadwaita.m4
subprojects/packagefiles/crossline/: meson.build
